home page changes

--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -1,5 +1,5 @@
 <div class="head-image">
-<img src="../../assets/images/global-presence.jpg">
+<img  src="../../assets/images/earth3.jpg">
 </div>
 <div class="overview-page">
   <div class="row">
