--- a/fm/src/app/home-my-data/home-my-data.component.scss
+++ b/fm/src/app/home-my-data/home-my-data.component.scss
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: flex-start;
     // background: linear-gradient(90deg, #1e3c72, #2a5298); /* Gradient background */
-
+  gap: 2rem;
     padding: 0.5rem 10rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
     background-size: cover;
@@ -33,8 +33,8 @@
   }
 
   .nav-item:hover {
-    background-color: #f1f1f1;
-    color: #1e3c72;
+    // background-color: #f1f1f1;
+    // color: #f1f1f1;;
   }
 
   .nav-item:hover::after {
@@ -43,13 +43,13 @@
 
   .nav-item:active {
     transform: scale(0.95); /* Slight scale down on click */
-    background-color: #e0e0e0;
-    color: #123;
+    // background-color: #e0e0e0;
+    // color: #123;
   }
 
   .nav-item.active {
-    background-color: #f1f1f1; /* Same as hover color */
-    color: #1e3c72; /* Same as hover color */
+    // background-color: #f1f1f1; /* Same as hover color */
+    // color: #1e3c72; /* Same as hover color */
   }
 
   .nav-item.active::after {
@@ -101,7 +101,7 @@
   }
 
   .nav-item:hover {
-    background-color: #f1f1f1;
+    // background-color: #f1f1f1;
     color: #1e3c72;
   }
 
@@ -111,13 +111,13 @@
 
   .nav-item:active {
     transform: scale(0.95); /* Slight scale down on click */
-    background-color: #e0e0e0;
-    color: #123;
+    // background-color: #e0e0e0;
+    // color: #123;
   }
 
   .nav-item.active {
-    background-color: #f1f1f1; /* Same as hover color */
-    color: #1e3c72; /* Same as hover color */
+    // background-color: #f1f1f1; /* Same as hover color */
+    // color: #1e3c72; /* Same as hover color */
   }
 
   .nav-item.active::after {
