--- a/fm/src/app/new-home/new-home.component.html
+++ b/fm/src/app/new-home/new-home.component.html
@@ -1,8 +1,10 @@
 <!-- Breadcrumb -->
-<nav class="breadcrumb">
-  <span class="breadcrumb-item" *ngIf="activeNavItem === 'my-space'">New Home > My Space > {{ activeSubNavItem }}</span>
-  <span class="breadcrumb-item" *ngIf="activeNavItem === 'teams-dashboard'">New Home > Teams > {{ activeSubNavItem }}</span>
-  <span class="breadcrumb-item" *ngIf="activeNavItem === 'organization'">New Home > Organization > {{ activeSubNavItem }}</span>
+<nav class="">
+  <div class="content rgb-animate">
+  <span class="" *ngIf="activeNavItem === 'my-space'">New Home > My Space > {{ activeSubNavItem }}</span>
+  <span class="" *ngIf="activeNavItem === 'teams-dashboard'">New Home > Teams > {{ activeSubNavItem }}</span>
+  <span class="" *ngIf="activeNavItem === 'organization'">New Home > Organization > {{ activeSubNavItem }}</span>
+</div>
 </nav>
 
 <!-- Navbar -->
