--- a/fm/src/app/new-home/new-home.component.scss
+++ b/fm/src/app/new-home/new-home.component.scss
@@ -118,7 +118,7 @@ background-size: cover;
 * {
 	margin: 0;
 	padding: 0;
-	color: white;
+	// color: white;
 	font-weight: 600;
 	letter-spacing: 0.1em;
 }
