--- a/fm/src/app/overview/overview.component.scss
+++ b/fm/src/app/overview/overview.component.scss
@@ -3,8 +3,6 @@
   margin-top: 5rem !important;
 }
 
-
-
 .custom-list {
   list-style: none;
   padding: 0;
@@ -39,8 +37,6 @@
   margin-top: -4rem;
 
 }
-
-
 
 .custom-list {
   list-style: none;
@@ -98,6 +94,10 @@ img{
 .overview-page {
   display: flex;
   flex-direction: column;
-  margin: -3rem 1rem 1rem 2rem;
+  margin: -3.5rem 5rem 1rem 2rem;
+  padding: 2rem;
 }
-
+.card-items{
+overflow-y: scroll;
+max-height: 300px;
+}
