--- a/fm/src/app/team-project/team-project.component.scss
+++ b/fm/src/app/team-project/team-project.component.scss
@@ -28,7 +28,7 @@
   }
 
  .card-header {
-background-color: #1e3c72;
+background-color: #259862;
   }
   .form-check{
     display: inline-flex;
@@ -66,7 +66,7 @@ background-color: #1e3c72;
   padding: 20px;
   background-color: #f8f9fa;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(151, 18, 18, 0.1);
   height: 80px;
 }
 
@@ -93,7 +93,7 @@ background-color: #1e3c72;
   border-collapse: collapse;
   margin: 20px 70px;
   font-family: Arial, sans-serif;
-
+  
   
 }
 
@@ -108,14 +108,17 @@ background-color: #1e3c72;
 }
 
 .project-table tr:hover {
-  background-color: #f1f1f1;
+  background-color: #ede5e5;
 }
 
 .project-table th {
-  background-color: #333;
+  background-color: rgba(57, 113, 255, 0.878);
   color: #fff;
   font-weight: bold;
+  margin: 10px;
 
+  
+  
 }
 
 .project-table td select {
@@ -123,6 +126,7 @@ background-color: #1e3c72;
   padding: 8px;
   border: 1px solid #ddd;
   border-radius: 4px;
+
 }
 
 .edit-btn, .delete-btn {
@@ -169,7 +173,8 @@ button {
   font-size: 14px;
   cursor: pointer;
   border: none;
-  border-radius: 4px;
+
+  border-radius: 20px;
   background-color: #007bff;
   color: white;
   transition: background-color 0.3s ease;
@@ -203,6 +208,10 @@ button:hover {
   .btn {
     padding: 8px 12px;
     font-size: 14px;
+  }
+  .card-body{
+    padding: 10px;
+    margin-left: 400px;
   }
 }
 
@@ -247,5 +256,22 @@ button:hover {
   }
 
 }
+.toast {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
 
+.hide {
+  opacity: 0;
+  visibility: hidden;
+}
+.toast show{
+ 
+  position: relative;
+  bottom: 231px;
+  right: -234px;
+  margin-left: 17px;
+  min-width: 250px;
+  
+}
   
