--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -115,7 +115,7 @@
           </p>
         </div>
         <div class="card-body" *ngIf="selectedTab === 'feeds'">1</div>
-        <div class="card-body" *ngIf="selectedTab === 'profile'">2</div>
+        <div class="card-body" *ngIf="selectedTab === 'profile'"> <app-profile></app-profile></div>
         <div class="card-body" *ngIf="selectedTab === 'approvals'">3</div>
         <div class="card-body" *ngIf="selectedTab === 'leave'">4</div>
         <div class="card-body" *ngIf="selectedTab === 'shift'">5</div>
