--- a/fm/src/app/overview/overview.component.scss
+++ b/fm/src/app/overview/overview.component.scss
@@ -98,6 +98,7 @@ img{
   padding: 2rem;
 }
 .card-items{
-overflow-y: scroll;
-max-height: 400px;
+  max-height: 40vh; 
+  overflow-y: auto;
+  padding: 10px; 
 }
