Home screen - profile changes and shift screens

--- a/fm/src/app/overview/overview.component.html
+++ b/fm/src/app/overview/overview.component.html
@@ -118,7 +118,7 @@
         <div class="card-body" *ngIf="selectedTab === 'profile'"> <app-profile></app-profile></div>
         <div class="card-body" *ngIf="selectedTab === 'approvals'">3</div>
         <div class="card-body" *ngIf="selectedTab === 'leave'">4</div>
-        <div class="card-body" *ngIf="selectedTab === 'shift'">5</div>
+        <div class="card-body" *ngIf="selectedTab === 'shift'"><app-shift></app-shift></div>
         <div class="card-body" *ngIf="selectedTab === 'files'">6</div>
       </div>
     </div>
