Skill-set-matrix

--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <div class="sidebar" [ngClass]="{ expanded: isExpanded }">
     <div class="header">
-      <img src="../assets/images/zoho_icon.png" />
+      <img src="../assets/images/TVM Infotech Logo.jpg" />
     </div>
     <div class="content">
       <div class="link" (click)="newHomeNavigate()" [ngClass]="{'active': activeLink === 'home'}">
