--- a/fm/src/app/goals-my-data/goals-my-data.component.html
+++ b/fm/src/app/goals-my-data/goals-my-data.component.html
@@ -1,5 +1,4 @@
 <nav class="navbar">
-    <div class="nav-item" [class.active]="activeNavItem === 'skillset'" (click)="navigateToSkillSet()">Skill Set</div>
     <div class="nav-item" [class.active]="activeNavItem === 'goals'" (click)="navigateToGoal()">Goals</div>
     <div class="nav-item" [class.active]="activeNavItem === 'competency'" (click)="navigateToCompetency()">Competency</div>
     <div class="nav-item" [class.active]="activeNavItem === 'feedback'" (click)="navigateToFeedback()">Feedback</div>
@@ -8,7 +7,7 @@
 
   <div class="main-content">
     <app-goals *ngIf="activeNavItem === 'goals'"></app-goals>
-    <app-skillset-performance *ngIf="activeNavItem === 'skillset'"></app-skillset-performance>
     <app-competency *ngIf="activeNavItem === 'competency'"></app-competency>
+    <!-- <app-skill-set-matrix *ngIf="activeNavItem === 'myskillsetmatrix'"></app-skill-set-matrix> -->
     <app-performance-feedback *ngIf="activeNavItem === 'feedback'"></app-performance-feedback>
   </div>
