--- a/fm/src/app/app.component.scss
+++ b/fm/src/app/app.component.scss
@@ -120,15 +120,17 @@ i {
 }
 
 img {
-  padding-left: 0px;
+  padding-left: 5px;
   position: absolute;
-  left: 13px;
+  border-radius: 5px;
+  left: 9px;
   top: 3px;
-  width: 40px;
+  width: 55px;
+  z-index: 1000;
 }
 .sidebar {
   overflow-y: auto;
-  scrollbar-width: thin;
+  scrollbar-width: none;
   scrollbar-color: #0088ff #f1f1f1;
 
 }
