--- a/fm/src/app/performance-my-data/performance-my-data.component.html
+++ b/fm/src/app/performance-my-data/performance-my-data.component.html
@@ -9,3 +9,4 @@
 </div>
 
 <app-goals-my-data *ngIf="activeNavItem === 'myData'" (subNavChange)="updateBreadcrumb($event)" ></app-goals-my-data>
+<app-skill-set-matrix *ngIf="activeNavItem === 'mySkillSetMatrix'" (subNavChange)="updateBreadcrumb($event)" ></app-skill-set-matrix>
