--- a/fm/src/app/app.component.html
+++ b/fm/src/app/app.component.html
@@ -58,7 +58,7 @@
         <div class="content">
           <i class="fa-solid fa-folder-open"></i>
           
-          <div class="title-home">Details</div>
+          <div class="title-home">Hires Details</div>
         </div>
       </div>
       <div class="link" (click)="operationNavigate()" *ngIf="!showPopup" [ngClass]="{'active': activeLink === 'operation'}">
