Fixed TVM Internal Changes

--- a/fm/src/app/approval-leave-request/approval-leave-request.component.scss
+++ b/fm/src/app/approval-leave-request/approval-leave-request.component.scss
@@ -49,3 +49,11 @@ button {
     margin: 0 4px;
     font-size: 14px;
 }
+.approved {
+    background-color: lightgreen; /* Green for approved */
+}
+
+.rejected {
+    background-color: lightcoral; /* Red for rejected */
+}
+
