--- a/fm/src/app/approval-leave-request/approval-leave-request.component.html
+++ b/fm/src/app/approval-leave-request/approval-leave-request.component.html
@@ -60,13 +60,14 @@
             <td mat-cell *matCellDef="let element">{{element.status}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>Actions</th>
-            <td mat-cell *matCellDef="let element">
-                <button mat-button color="primary" (click)="approveRequest(element)">Approve</button>
-                <button mat-button color="warn" (click)="rejectRequest(element)">Reject</button>
-            </td>
-        </ng-container>
+       <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element" [ngClass]="{'approved': element.status === 'approved', 'rejected': element.status === 'rejected'}">
+        <button mat-button color="primary" (click)="approveRequest(element)">Approve</button>
+        <button mat-button color="warn" (click)="rejectRequest(element)" >Reject</button>
+    </td>
+</ng-container>
+
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
